--- a/src/sass/header_style.sass
+++ b/src/sass/header_style.sass
@@ -18,12 +18,17 @@ header
             background-color: $main_lightgrey
             border-radius: 6px
             cursor: pointer
+            transition-duration: 1.5s
             a
+                text-decoration: none
+                color: black
                 width: 100%
                 display: block
                 position: absolute
                 top: 50%
                 transform: translateY(-50%)
+        div:hover
+            background-color: $buttons_grey
     div.burger_menu
         position: relative
         height: 30px
