--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -7,6 +7,7 @@
 @import "recommendations_style.sass"
 @import "footer_style.sass"
 @import "day_of_city.sass"
+@import "mobile_menu.sass"
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap')
 
 @media (min-width: 1px) and (max-width: 430px)
