--- a/src/sass/style_variables.sass
+++ b/src/sass/style_variables.sass
@@ -3,6 +3,7 @@ $main_blue: rgb(21, 19, 138)
 $dark_blue: rgb(90, 88, 224)
 $main_orange: rgb(255, 159, 15)
 $main_darkgrey: rgb(230, 230, 230)
+$buttons_grey: rgb(210, 210, 210)
 $main_block_shadow: 0px 6px 10px 6px rgba(150, 150, 150, .5)
 $main_img_shadow: 6px 5px 18px 5px rgba(150, 150, 150, .5)
 $bold_font_color: rgb(30, 30, 30)
