--- a/src/sass/mobile_menu.sass
+++ b/src/sass/mobile_menu.sass
@@ -2,20 +2,19 @@
 
 @media (min-width: 1px) and (max-width: 430px)
     .mobile_menu_block
-        display: none
-        position: fixed
-        top: 0
-        left: 0
-        z-index: 9
-        width: 100%
         height: 100%
-        background-color: rgba(181, 181, 181, .5)
-        transition-duration: 1s
+        width: 100%
         .mobile_menu_options
-            padding-top: 25%
+            position: fixed
+            z-index: 9
             height: 100%
             width: 50%
+            top: 0
+            left: 100%
+            padding-top: 25%
             background-color: $main_orange
+            visibility: hidden
+            transition: all 1s
             .option_block
                 margin: 20px auto 0 auto
                 height: 30px
@@ -26,3 +25,20 @@
                     padding: 8px
                     text-decoration: none
                     color: black
+        .mobile_menu_options.active
+            visibility: visible
+            left: 50%
+        .mobile_menu_overlay
+            position: fixed
+            z-index: 8
+            top: 0
+            left: 0
+            width: 100%
+            height: 100%
+            background-color: rgba(181, 181, 181, .5)
+            visibility: hidden
+            opacity: 0
+            transition: all 1.5s
+        .mobile_menu_overlay.active
+            visibility: visible
+            opacity: 1
