modal window added

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,6 +8,7 @@
 @import "footer_style.sass"
 @import "day_of_city.sass"
 @import "mobile_menu.sass"
+@import "modal_window.sass"
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap')
 
 @media (min-width: 1px) and (max-width: 430px)
