--- a/src/sass/style_variables.sass
+++ b/src/sass/style_variables.sass
@@ -7,3 +7,4 @@ $buttons_grey: rgb(210, 210, 210)
 $main_block_shadow: 0px 6px 10px 6px rgba(150, 150, 150, .5)
 $main_img_shadow: 6px 5px 18px 5px rgba(150, 150, 150, .5)
 $bold_font_color: rgb(30, 30, 30)
+$overlay_grey: rgba(181, 181, 181, .5)
