--- a/src/sass/mobile_menu.sass
+++ b/src/sass/mobile_menu.sass
@@ -22,8 +22,11 @@
                 background-color: white
                 border-radius: 6px
                 a
-                    padding: 8px
+                    display: block
+                    padding: 4px 0 0 4px
+                    width: 100%
                     text-decoration: none
+                    text-align: center
                     color: black
         .mobile_menu_options.active
             visibility: visible
@@ -35,10 +38,15 @@
             left: 0
             width: 100%
             height: 100%
-            background-color: rgba(181, 181, 181, .5)
+            background-color: $overlay_grey
             visibility: hidden
             opacity: 0
             transition: all 1.5s
         .mobile_menu_overlay.active
             visibility: visible
             opacity: 1
+
+@media (min-width: 1px)
+    .mobile_menu_block
+        .mobile_menu_options
+            visibility: hidden
