--- a/src/sass/modal_window.sass
+++ b/src/sass/modal_window.sass
@@ -1,31 +1,138 @@
 @import "style_variables.sass"
 
+.modal_block.active
+    visibility: visible
+    opacity: 1
 .modal_block
     position: fixed
+    visibility: hidden
+    opacity: 0
     z-index: 9
     top: 0
     left: 0
     width: 100%
     height: 100%
     background-color: $overlay_grey
+    transition-duration: 0.5s
     .modal_window
-        position: fixed
+        position: relative
         z-index: 10
-        width: 500px
-        height: 400px
-        border-radius: 6px
+        border-radius: 8px
         background-color: white
         left: 50%
         top: 50%
         transform: translate(-50%, -50%)
+        .modal_description
+            margin: 0 auto 0 auto
+            text-align: center
+            max-width: 80%
+        .modal_close_button
+            position: absolute
+            transition-duration: 0.5s
+        .modal_close_button:hover
+            cursor: pointer
+            color: red
         .modal_form
-            margin: 30% auto 0 auto
+            position: absolute
+            left: 50%
+            top: 50%
+            transform: translate(-50%, -50%)
             width: 80%
             height: 80%
-            label
-                display: block
-                margin: 0 auto
-                text-align: center
             input
                 display: block
-                margin: 0 auto
+                padding: 8px
+                transition-duration: 0.5s
+            input.input_submit
+                padding: 0
+                background-color: $main_lightgrey
+                border: solid
+                border-width: 1px
+                border-color: $main_blue
+                transition: 1s
+                color: $dark_blue
+            input.input_submit:hover
+                background-color: $main_orange
+                outline: none
+            input:focus
+                outline: none
+                border: solid
+                border-width: 2px
+                border-color: $main_orange
+
+@media (min-width: 1px) and (max-width: 430px)
+    .modal_window
+        width: 85%
+        height: 60%
+        .modal_description
+            padding-top: 45px
+            text-align: center
+            font-size: 1.4rem
+            max-width: 80%
+        .modal_form
+            padding-top: 170px
+            input
+                margin: 10px auto 0 auto
+                width: 210px
+                height: 25px
+                font-size: 1.6rem
+            input.input_submit
+                margin-top: 45px
+                height: 35px
+                width: 150px
+        .modal_close_button
+            left: 88%
+            top: 1%
+            font-size: 3rem
+            transition-duration: 0.5s
+
+@media (min-width: 431px) and (max-width: 1149px)
+    .modal_window
+        max-width: 450px
+        height: 300px
+        .modal_description
+            padding-top: 25px
+            text-align: center
+            font-size: 1.4rem
+            max-width: 70%
+    .modal_close_button
+        font-size: 2.2rem
+        left: 93%
+        top: 3%
+    .modal_form
+        padding-top: 80px
+        input
+            margin: 10px auto 0 auto
+            padding: 8px
+            width: 240px
+            height: 20px
+        input.input_submit
+            padding: 0
+            height: 35px
+            width: 130px
+
+@media (min-width: 1150px)
+    .modal_window
+        max-width: 500px
+        height: 400px
+        .modal_description
+            padding-top: 55px
+            text-align: center
+            font-size: 1.6rem
+            max-width: 70%
+    .modal_close_button
+        font-size: 2.5rem
+        left: 93%
+        top: 2%
+    .modal_form
+        padding-top: 150px
+        input
+            margin: 10px auto 0 auto
+            padding: 8px
+            width: 270px
+            height: 25px
+        input.input_submit
+            margin-top: 30px
+            padding: 0
+            height: 40px
+            width: 170px
