--- a/src/sass/day_of_city.sass
+++ b/src/sass/day_of_city.sass
@@ -223,6 +223,7 @@
                         .bd_slider_tape 
                             width: 200px
                             height: 50px
+                            left: 145px
         .bd_counter_container
             font-size: 1.9rem
         .bd_info_container
