--- a/src/sass/footer_style.sass
+++ b/src/sass/footer_style.sass
@@ -1,8 +1,29 @@
 @import "style_variables.sass"
 
 footer
-    margin: 70px auto 0 auto
+    margin: 120px auto 0 auto
     max-width: 90%
     border-radius: 5px 5px 0 0 
     height: 200px
-    background-color: rgb(181, 181, 181)
+    background-color: rgb(200, 200, 200)
+    position: relative
+    div
+        position: absolute
+        left: 50%
+        top: 70%
+        transform: translateX(-50%)
+        color: rgb(110, 110, 110)
+
+@media (min-width: 1px)
+    footer
+        max-width: 100%
+        font-size: 1.2rem
+        border-radius: 0
+@media (min-width: 431px)
+    footer
+        max-width: 90%
+        border-radius: 5px 5px 0 0
+
+@media (min-width: 1400px)
+    footer
+        font-size: 1.5rem
